--- a/GoreLike/GoreLike.csproj
+++ b/GoreLike/GoreLike.csproj
@@ -68,6 +68,8 @@
   <ItemGroup>
     <Compile Include="Core\Actor.cs" />
     <Compile Include="Core\Colours.cs" />
+    <Compile Include="Core\Constants.cs" />
+    <Compile Include="Core\Direction.cs" />
     <Compile Include="Core\DungeonMap.cs" />
     <Compile Include="Core\Player.cs" />
     <Compile Include="Core\Swatch.cs" />
@@ -75,6 +77,7 @@
     <Compile Include="Interfaces\IActor.cs" />
     <Compile Include="Interfaces\IDrawable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Systems\CommandSystem.cs" />
     <Compile Include="Systems\MapGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -82,6 +85,12 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Cheepicus_12x12.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Cheepicus_16x16.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="terminal8x8.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
